# mcp-alchemy

./: .env-wms  .gitignore  README.md  TESTS.md  mcp_alchemy.py  pyproject.toml  server.py
tests/: claude_desktop_config.json  docker-compose.yml
